From 4924e0f (test):
===================

In scalarInvariants.py,

(*) Update normalisations of advariants in 
invariants_from_advariants_method1()

In tests/test_scalarInvariants.py,

(*) Update input parameters (normaxis) and normwts in test function
test_invariants_from_advariants_method1()

From deccb1c (examples):
=======================

In examples/scalar_invariants.ipynb, 

(*) Add test for point source invariance and to translation

From 1d8707a (examples):
=======================

(*) Add examples/scalar_invariants.ipynb to repo

From 413348c (test):
===================

In tests/test_scalarInvariants.py,

(*) Rename test_scalar_invariance() to test_scalar_invariance_old()
(*) Test the invariance and scale factor in the new 
test_scalar_invariance()

In tests/conftest.py,

(*) Add pytest fixtures npairs and ntriads_indep

From d8362f8 (test):
===================

In tests/test_scalarInvariants.py,

(*) Modify test_copol_advariants_multiple_loops() to 
test_copol_advariants_multiple_loops_old()
(*) Add test_copol_advariants_multiple_loops() based on changes in 
tests/conftest.py
(*) Minor changes

In tests/conftest.py,

(*) Add pytest fixtures copol_xc, copol_xc_lol, copol_advariant_loops,
copol_complex_gains
(*) minor updates 

In scalarInvariants.py,

(*) Move loop axis to the last axis in the value returned from function
advariants_multiple_loops() 

From 7bdff48 (test):
===================

In tests/test_vectorInvariants.py,

(*) Modify test_invariance() to test_invariance_old()
(*) Add test_invariance() to test invariance to complex polarimetric 
gains and the scale factors are the determinants of the gains 

In tests/conftest.py,

(*) Add pytest fixture nruns_shape
(*) minor updates 

From f9331a4 (test):
===================

In tests/test_vectorInvariants.py,

(*) Add test_vectors_from_advariants() to test creation of 4-vectors 
from advariants

In tests/conftest.py,

(*) Add pytest fixture pol_advariants_random 

From 701920e (test):